recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: value += is not a member of Int
	increment += length
                  ^